packages/gumicorn/gumicorn-23.0.0.tar.gz/gumicorn-23.0.0/tests/requests/invalid/prefix_05.py
from gumicorn.config import Config
from gumicorn.http.errors import InvalidRequestMethod

cfg = Config()
request = InvalidRequestMethod
